--- a/workinspector/src/main/res/layout/wi_activity_work_inspector.xml
+++ b/workinspector/src/main/res/layout/wi_activity_work_inspector.xml
@@ -6,6 +6,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
